# rinf_todo_demo

./: README.md  make_wasm.ps1  make_wasm_release.ps1  make_wasm_release_max.ps1  pubspec.yaml  wasm_opt_COMMANDS
.context/: rinf.md  rinf_instruct.md  rinf_new.md  rinf_router.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/new_rinf_test/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  todo_page.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/hub/: Cargo.toml
native/hub/src/: lib.rs
native/hub/src/actors/: first.rs  mod.rs  second.rs
native/hub/src/routes/: mod.rs  todo_routes.rs
native/hub/src/signals/: mod.rs  todo.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
