[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
rinf = "8.6.0"
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.87"
messages = "0.3.1"
#rinf-router = "1.1.0"
rinf-router = { git = "https://github.com/johnwaltonvi/rinf-router" }

#tokio = { version = "1", features = ["rt", "macros", "time"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.45.1", features = ["macros", "time", "sync", "rt-multi-thread"] }

#try to use tokio in this crate instead of tokio with wasm

[target.'cfg(target_arch = "wasm32")'.dependencies]
 tokio_with_wasm = { version = "0.8.5", features = ["rt", "macros", "time", "sync"] }
 wasm-bindgen = "0.2.100"
